--- a/app/views/halo4/playlists.html.erb
+++ b/app/views/halo4/playlists.html.erb
@@ -234,7 +234,9 @@
 
 <script>
 	function deg(deg) {
-		//noinspection JSUnresolvedVariable
-		return (Math.PI/180)*deg - (Math.PI/180)*90
+		// noinspection JSUnresolvedVariable
+		var PI = 3.141592653589793;
+
+		return (PI / 180) * deg - (PI / 180) * 90;
 	}
 </script>
