--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,5 +1,5 @@
-<% #title 'Circles of Hate ™' %>
-<% #tactive_home 'active' %>
+<% title '' %>
+<% active_home 'active' %>
 
 <div class="container-fluid" style="margin-top: 80px; margin-left: 5%; margin-right: 5%; ">
   <% if flash[:notice] && (flash[:type] == 'success' || flash[:type] == 'error' || flash[:type] == 'warning') %>
