--- a/app/views/halo4/playlists.html.erb
+++ b/app/views/halo4/playlists.html.erb
@@ -1,3 +1,6 @@
+<% title ' - Halo 4 H4Playlists' %>
+<% active_halo4 'active' %>
+
 <div class="container" style="margin-top: 100px;">
 	<% if flash[:notice] && (flash[:type] == 'success' || flash[:type] == 'error' || flash[:type] == 'warning') %>
 	  <div class="alert alert-<%= flash[:type] %>">
