--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,3 +1,6 @@
+<% title " - #{params[:gamertag]}'s Search Results'" %>
+<% active_home 'active' %>
+
 <div class="container" style="margin-top: 80px;">
   <% if flash[:notice] && (flash[:type] == 'success' || flash[:type] == 'error' || flash[:type] == 'warning') %>
     <div class="alert alert-<%= flash[:type] %>">
