--- a/app/assets/stylesheets/halo4.css.scss
+++ b/app/assets/stylesheets/halo4.css.scss
@@ -255,37 +255,116 @@
           text-align: center;
         }
 
-  .team-player-flair {
-    float: left;
+.team-player-flair {
+  float: left;
 
-    height: 55px;
-    width: 55px;
+  height: 55px;
+  width: 55px;
 
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 48px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 48px;
+}
+.team-player-name {
+  float: left;
+
+  margin: 5px 0 0 10px;
+}
+.team-player-csr {
+  float: right;
+
+  height: 50px;
+  width: 40px;
+
+  margin: 0 10px 0 0;
+
+  background-size: 40px 50px;
+}
+.team-player-rank {
+  width: 100px;
+  height: 40px;
+
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.player-popbox {
+  display: none;
+  position: absolute;
+  z-index: 99999;
+  width: 250px;
+  background-color: #131517;
+  color: #000000;
+  border: 1px solid #4D4F53;
+  margin: 0px;
+}
+  .player-popbox > .header {
+    background-color: #333;
+    color: #ffffff;
+    font-size: 14px;
+    display: block;
+    height: 25px;
+    width: 246px;
+    padding-top: 4px;
+    padding-left: 4px;
   }
-  .team-player-name {
+    .player-popbox .entry > .title {
     float: left;
-
-    margin: 5px 0 0 10px;
   }
-  .team-player-csr {
+    .player-popbox .entry > .body {
     float: right;
-
-    height: 50px;
-    width: 40px;
-
-    margin: 0 10px 0 0;
-
-    background-size: 40px 50px;
   }
-  .team-player-rank {
-    width: 100px;
-    height: 40px;
+  .player-popbox > .personal-info {
+    margin: 10px 10px 10px 10px;
+    color: white;
+    font-size: 13px;
+  }
 
-    background-repeat: no-repeat;
-    background-position: center;
+.carnage_damage_stats {
+  display: none;
+}
+
+.damage-stat-popbox {
+  display: none;
+  position: absolute;
+  z-index: 99999;
+  width: 250px;
+  background-color: #131517;
+  color: #000000;
+  border: 1px solid #4D4F53;
+  margin: 0px;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(164, 164, 164, 1);
+  box-shadow: 0px 0px 5px 0px rgba(164, 164, 164, 1);
+}
+  .damage-stat-popbox > .header {
+    background-color: #333;
+    color: #ffffff;
+    font-size: 14px;
+    display: block;
+    height: 25px;
+    width: 100%;
+    padding-top: 4px;
+    padding-left: 4px;
+  }
+  .damage-stat-popbox > .seperate {
+    border: 1px solid #333;
+    margin: 15px 20px;
+  }
+    .damage-stat-popbox .entry > .title {
+    float: left;
+  }
+    .damage-stat-popbox .entry > .body {
+      float: right;
+    }
+  .damage-stat-popbox > .weapon-info {
+    margin: 10px 10px 10px 10px;
+    color: white;
+    font-size: 13px;
+  }
+  .damage-stat-popbox > .personal-info {
+    margin: 0 10px 10px 10px;
+    color: white;
+    font-size: 13px;
   }
 
 /* Challenges
