--- a/app/assets/stylesheets/halo4.css.scss
+++ b/app/assets/stylesheets/halo4.css.scss
@@ -367,6 +367,66 @@
     font-size: 13px;
   }
 
+.medal-entry {
+  width: 80px;
+  height: 90px;
+
+  margin: 10px auto;
+  text-align: center;
+
+  background-position: center 10px;
+  background-repeat: no-repeat;
+
+  line-height: 12em;
+}
+
+.medal_stats {
+  display: none;
+}
+
+.medal-stat-popbox {
+  display: none;
+  position: absolute;
+  z-index: 99999;
+  width: 250px;
+  background-color: #131517;
+  color: #000000;
+  border: 1px solid #4D4F53;
+  margin: 0px;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(164, 164, 164, 1);
+  box-shadow: 0px 0px 5px 0px rgba(164, 164, 164, 1);
+}
+  .medal-stat-popbox > .header {
+    background-color: #333;
+    color: #ffffff;
+    font-size: 14px;
+    display: block;
+    height: 25px;
+    width: 100%;
+    padding-top: 4px;
+    padding-left: 4px;
+  }
+  .medal-stat-popbox > .seperate {
+    border: 1px solid #333;
+    margin: 15px 20px;
+  }
+    .medal-stat-popbox .entry > .title {
+      float: left;
+    }
+    .medal-stat-popbox .entry > .body {
+    float: right;
+  }
+  .medal-stat-popbox > .weapon-info {
+    margin: 10px 10px 10px 10px;
+    color: white;
+    font-size: 13px;
+  }
+  .medal-stat-popbox > .personal-info {
+    margin: 0 10px 10px 10px;
+    color: white;
+    font-size: 13px;
+  }
+
 /* Challenges
 --------------------------------- */
 .challenge-container {
