--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="brand" href="/">Halo 4 Stats<sup>{placeholder}</sup></a>
+	      <a class="brand" href="/">Branch<sup>{alpha}</sup></a>
 	      <div class="nav-collapse collapse">
 	        <p class="navbar-text pull-right">
 	          Powered by <a href="http://www.AuntieDot.net" target="_blank">Auntie Dot</a>
